force-app/main/default/objects/Feedback__c/fields/Improvement_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Suggestions__c</fullName>
    <label>Improvement Suggestions</label>
    <type>TextArea</type>
</CustomField>