force-app/main/default/objects/Feedback__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Consultation</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Speech Therapy</fullName>
            </value>
            <value>
                <fullName>Behavioral Therapy</fullName>
            </value>
            <value>
                <fullName>Nutritional Counseling</fullName>
            </value>
            <value>
                <fullName>Wellness Coaching</fullName>
            </value>
            <value>
                <fullName>Health Assessment</fullName>
            </value>
            <value>
                <fullName>Mental Health Support</fullName>
            </value>
            <value>
                <fullName>Group Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>